--- a/supervisord.conf
+++ b/supervisord.conf
@@ -1,8 +1,3 @@
-[unix_http_server]
-file=/tmp/supervisor.sock   ; (the path to the socket file)
-username=nobody
-password=nobody
-
 [supervisord]
 logfile=/tmp/supervisord.log ; (main log file;default $CWD/supervisord.log)
 loglevel=trace                ; (log level;default info; others: debug,warn,trace)
@@ -11,12 +6,9 @@ user=root                    ; (default is current user, required if root)
 
 [program:sleep]
 command=/bin/sleep infinity
-autostart=true
-autorestart=true
-priority=10
-stdout_events_enabled=true
-stderr_events_enabled=true
-stdout_logfile=/dev/stdout
-stdout_logfile_maxbytes=0
-stderr_logfile=/dev/stderr
-stderr_logfile_maxbytes=0
+# stdout_events_enabled=true
+# stderr_events_enabled=true
+# stdout_logfile=/dev/stdout
+# stdout_logfile_maxbytes=0
+# stderr_logfile=/dev/stderr
+# stderr_logfile_maxbytes=0
