--- a/supervisord.conf
+++ b/supervisord.conf
@@ -6,9 +6,9 @@ user=root                    ; (default is current user, required if root)
 
 [program:sleep]
 command=/bin/sleep infinity
-# stdout_events_enabled=true
-# stderr_events_enabled=true
-# stdout_logfile=/dev/stdout
-# stdout_logfile_maxbytes=0
-# stderr_logfile=/dev/stderr
-# stderr_logfile_maxbytes=0
+stdout_events_enabled=true
+stderr_events_enabled=true
+stdout_logfile=/dev/stdout
+stdout_logfile_maxbytes=0
+stderr_logfile=/dev/stderr
+stderr_logfile_maxbytes=0
