--- a/supervisord.conf
+++ b/supervisord.conf
@@ -4,11 +4,10 @@ loglevel=trace                ; (log level;default info; others: debug,warn,trac
 pidfile=/tmp/supervisord.pid ; (supervisord pidfile;default supervisord.pid)
 user=root                    ; (default is current user, required if root)
 
+[unix_http_server]
+file=/tmp/supervisor.sock   ; (the path to the socket file)
+username=nobody
+password=nobody
+
 [program:sleep]
 command=/bin/sleep infinity
-stdout_events_enabled=true
-stderr_events_enabled=true
-stdout_logfile=/dev/stdout
-stdout_logfile_maxbytes=0
-stderr_logfile=/dev/stderr
-stderr_logfile_maxbytes=0
