is it the /tmp dir or any dir w/ the socket

--- a/supervisord.conf
+++ b/supervisord.conf
@@ -1,11 +1,11 @@
 [supervisord]
-logfile=/tmp/supervisord.log ; (main log file;default $CWD/supervisord.log)
+logfile=/tmp/super/supervisord.log ; (main log file;default $CWD/supervisord.log)
 loglevel=trace                ; (log level;default info; others: debug,warn,trace)
-pidfile=/tmp/supervisord.pid ; (supervisord pidfile;default supervisord.pid)
+pidfile=/tmp/super/supervisord.pid ; (supervisord pidfile;default supervisord.pid)
 user=root                    ; (default is current user, required if root)
 
 [unix_http_server]
-file=/tmp/supervisor.sock   ; (the path to the socket file)
+file=/tmp/super/supervisor.sock   ; (the path to the socket file)
 username=nobody
 password=nobody
 
